--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,5 +1,5 @@
 [versions]
-agp = "8.3.0-rc02"
+agp = "8.3.1"
 blurkit = "1.2.0"
 junit = "4.13.2"
 junitVersion = "1.1.5"
@@ -14,6 +14,7 @@ navigationUi = "2.7.7"
 firebaseDatabase = "20.3.1"
 carUiLib = "2.6.0"
 gridlayout = "1.0.0"
+activity = "1.8.0"
 
 [libraries]
 blurkit = { module = "io.alterac.blurkit:blurkit", version.ref = "blurkit" }
@@ -30,6 +31,7 @@ navigation-ui = { group = "androidx.navigation", name = "navigation-ui", version
 firebase-database = { group = "com.google.firebase", name = "firebase-database", version.ref = "firebaseDatabase" }
 car-ui-lib = { group = "com.android.car.ui", name = "car-ui-lib", version.ref = "carUiLib" }
 gridlayout = { group = "androidx.gridlayout", name = "gridlayout", version.ref = "gridlayout" }
+activity = { group = "androidx.activity", name = "activity", version.ref = "activity" }
 
 [plugins]
 androidApplication = { id = "com.android.application", version.ref = "agp" }
